<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@color/bg_white"
        tools:context=".ui.RightAnswerFragment">

    <TextView
            android:id="@+id/tv_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:padding="5dp"
            android:textColor="@color/header_text_color"
            android:textSize="30sp"
            android:textStyle="bold"
            android:text="@string/correctanswerlabel"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            tools:text="@string/correctanswerlabel" />

    <TextView
            android:id="@+id/tv_Correct_output"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="5dp"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            android:text="@string/earnedlabel"
            app:layout_constraintEnd_toEndOf="@id/tv_header"
            app:layout_constraintStart_toStartOf="@id/tv_header"
            app:layout_constraintTop_toBottomOf="@id/tv_header"
            tools:text="@string/earnedlabel" />

    <LinearLayout
            android:id="@+id/layout_EarnedCredit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
        android:orientation="horizontal"
            android:gravity="center"
            app:layout_constraintEnd_toEndOf="@id/tv_Correct_output"
            app:layout_constraintStart_toStartOf="@id/tv_Correct_output"
            app:layout_constraintTop_toBottomOf="@id/tv_Correct_output"
            >
        <ImageView
                android:id="@+id/img_Output"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="right"
                android:padding="5dp"
                android:layout_marginEnd="5dp"
                android:layout_marginRight="5dp"
                android:src="@drawable/ic_correct_badge"/>

        <TextView
                android:id="@+id/tv_Badge_earned"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="left|center"
                android:textAppearance="@android:style/TextAppearance.Medium.Inverse"
                android:textColor="@android:color/black"
                android:textSize="16sp"
                android:text="1"
                android:padding="2dp"
                android:layout_marginLeft="5dp"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                tools:text="1" />
        <ImageView
                android:id="@+id/img_Level"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center|left"
                android:padding="5dp"
                android:layout_marginStart="5dp"
                android:layout_marginLeft="5dp"
                android:src="@drawable/ic_correct_level"/>

        <TextView
                android:id="@+id/tv_Level_earned"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="5dp"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:gravity="left|center"
                android:text="1"
                android:textAppearance="@android:style/TextAppearance.Medium.Inverse"
                android:textColor="@android:color/black"
                android:textSize="16sp"
                android:maxLines="2"
                android:padding="5dp"
                tools:text="1" />


    </LinearLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
        android:orientation="horizontal" android:padding="5dp"
            android:gravity="center|center_horizontal"
            app:layout_constraintTop_toBottomOf="@id/layout_EarnedCredit"
        >
        <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_share"
                android:padding="10dp"
                android:layout_gravity="center|bottom"

                />


        <TextView
                android:id="@+id/tv_CheckforMore"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:gravity="left|center"
                android:textAppearance="@android:style/TextAppearance.Medium.Inverse"
                android:textColor="@android:color/black"
                android:textSize="13sp"
                android:maxLines="2"
                android:padding="10dp"
                android:text="@string/check_for_more"
                tools:text="@string/check_for_more" />

    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>